--- a/dom manipulation & events/index.html
+++ b/dom manipulation & events/index.html
@@ -31,6 +31,11 @@
           <div class="card-action">
             <h5 id="task-title">Tasks</h5>
             <ul class="collection">
+              <select>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+              </select>
               <li class="collection-item">
                 List Item
                 <a href="#" class="delete-item secondary-content">
