--- a/loancalculator/index.html
+++ b/loancalculator/index.html
@@ -7,7 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <style>
+        #loading,#results{
+            display: none;
+        }
+    </style>
     <title>Loan Calculator</title>
   </head>
   <body class="bg-dark">
@@ -37,9 +41,9 @@
                         </div>
                     </form>
                     <!-- LOADER -->
-                    <!-- <div id="loading">
+                    <div id="loading">
                         <img src="img/loading.gif">
-                    </div> -->
+                    </div>
                     <!-- RESULTS -->
                     <div id="results" class="pt-4">
                         <h5>Results</h5>
